5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1646_2449.log
== TEST (2019-04-09 16:13:21) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c * e - b * f) / (a * e -b * d)
y = (a * f - c * d) / (a * e - b * d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c * e - b * f) / (a * e -b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:23) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c * e - b * f) / (a * e -b * d)
y = (a * f - c * d) / (a * e - b * d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c * e - b * f) / (a * e -b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:29) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c * e - b * f) / (a * e -b * d)
y = (a * f - c * d) / (a * e - b * d)

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c * e - b * f) / (a * e -b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:13:43) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c * e - b * f) / (a * e -b * d)
y = (a * f - c * d) / (a * e - b * d)

print(x)
print(y)
-- EXECUTION TIME:
0.133085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = (c * e - b * f) / (a * e -b * d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:13:43) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

x = (c * e - b * f) / (a * e -b * d)
y = (a * f - c * d) / (a * e - b * d)

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c * e - b * f) / (a * e -b * d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:17:26) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

g = (a * e -b * d)

if g == 0:
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / g
	y = (a * f - c * d) / g

print(x)
print(y)
-- EXECUTION TIME:
0.14611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 16, in <module>
    print(x)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:17:26) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

g = (a * e -b * d)

if g == 0:
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / g
	y = (a * f - c * d) / g

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:17:45) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

g = (a * e -b * d)

if g == 0:
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / g
	y = (a * f - c * d) / g

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:01) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

g = (a * e -b * d)

if g == 0:
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / g
	y = (a * f - c * d) / g

print(x)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:18:24) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

g = (a * e -b * d)

if g == 0:
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / g
	y = (a * f - c * d) / g
	print(x)
	print(y)
-- EXECUTION TIME:
0.298605
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:18:24) 
-- CODE:
a = float(input("a: "))
b = float(input("b: "))
c = float(input("c: "))
d = float(input("d: "))
e = float(input("e: "))
f = float(input("f: "))

g = (a * e -b * d)

if g == 0:
	print("Nao tem solucao")
else:
	x = (c * e - b * f) / g
	y = (a * f - c * d) / g
	print(x)
	print(y)
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
